--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -22,8 +22,8 @@ env:
   BUILD_TYPE: Release
   CMAKE_GENERATOR: Ninja
   WEBVULKAN_CACHE_VERSION: v3
-  LLVM_PREBUILT_URL: ${{ vars.WEBVULKAN_LLVM_PREBUILT_URL }}
-  LLVM_PREBUILT_SHA256: ${{ vars.WEBVULKAN_LLVM_PREBUILT_SHA256 }}
+  LLVM_PREBUILT_URL: https://github.com/Devsh-Graphics-Programming/llvmpipe2wasm/releases/download/llvm-wasm-prebuilt-latest/llvm-wasm-install.zip
+  LLVM_PREBUILT_SHA256: ""
   DXC_WASM_PREBUILT_URL: https://github.com/Devsh-Graphics-Programming/llvmpipe2wasm/releases/download/dxc-wasm-prebuilt-latest/dxc-wasm-prebuilt.zip
 
 jobs:
@@ -42,6 +42,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y ninja-build flex bison python3-pip glslang-tools
           python3 -m pip install --upgrade pip
+          python3 -m pip install meson mako
           python3 -m pip install cmake==4.2.0
 
       - name: Restore third-party cache
@@ -64,14 +65,6 @@ jobs:
           key: ${{ runner.os }}-webvulkan-build-${{ env.WEBVULKAN_CACHE_VERSION }}-${{ hashFiles('CMakeLists.txt', 'cmake/BuildMesaLlvmpipeWasm.cmake', 'tests/CMakeLists.txt', 'tests/RunLavapipeRuntimeSmoke.cmake') }}-${{ env.LLVM_PREBUILT_SHA256 }}
           restore-keys: |
             ${{ runner.os }}-webvulkan-build-${{ env.WEBVULKAN_CACHE_VERSION }}-
-
-      - name: Validate prebuilt LLVM settings
-        shell: bash
-        run: |
-          if [ -z "${LLVM_PREBUILT_URL}" ]; then
-            echo "WEBVULKAN_LLVM_PREBUILT_URL repository variable is required for CI"
-            exit 1
-          fi
 
       - name: Bootstrap DXC Wasm prebuilt
         shell: bash
