--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,9 +30,12 @@ set(WASM_BUILD_DIR "${WEBVULKAN_BUILD_DIR}/wasm" CACHE PATH "WASM sub-build dire
 set(WEBVULKAN_EMSCRIPTEN_TOOLCHAIN_FILE "${PROJECT_SOURCE_DIR}/cmake/toolchains/WebVulkanEmscripten.cmake" CACHE FILEPATH "Custom Emscripten toolchain file")
 set(MESA_SRC_DIR "${WEBVULKAN_THIRDPARTY_DIR}/mesa" CACHE PATH "Path where Mesa is cloned")
 set(MESA_GIT_URL "https://github.com/Devsh-Graphics-Programming/mesa.git" CACHE STRING "Mesa git repository URL")
-set(MESA_GIT_REF "caeeea677046411288c1a5155d81b27640aedd3a" CACHE STRING "Pinned Mesa git ref")
+set(MESA_GIT_REF "6da627eb8033ac32cd894a1fe659e11db733a265" CACHE STRING "Pinned Mesa git ref")
 if(MESA_GIT_REF STREQUAL "fc73e2257d9c2b51f64c78eaaafe878a73951eb8")
-  set(MESA_GIT_REF "caeeea677046411288c1a5155d81b27640aedd3a" CACHE STRING "Pinned Mesa git ref" FORCE)
+  set(MESA_GIT_REF "6da627eb8033ac32cd894a1fe659e11db733a265" CACHE STRING "Pinned Mesa git ref" FORCE)
+endif()
+if(MESA_GIT_REF STREQUAL "caeeea677046411288c1a5155d81b27640aedd3a")
+  set(MESA_GIT_REF "6da627eb8033ac32cd894a1fe659e11db733a265" CACHE STRING "Pinned Mesa git ref" FORCE)
 endif()
 set(MESA_WASM_BUILD_DIR "${WEBVULKAN_BUILD_DIR}/mesa-wasm" CACHE PATH "Mesa WASM build directory")
 set(LLVM_SRC_DIR "${WEBVULKAN_THIRDPARTY_DIR}/llvm-project" CACHE PATH "Path where llvm-project is cloned")
